@@ -1,6 +1,6 @@
 package org.talend.dataquality.statistics.numeric.histogram;
 
-public class Range {
+public class Range implements Comparable<Range>{
 
     double lower, upper;
 
@@ -23,6 +23,16 @@ public class Range {
 
     public void setUpper(double upper) {
         this.upper = upper;
+    }
+
+    @Override
+    public int compareTo(Range another) {
+        if(lower<another.lower){
+            return -1;
+        }else if(lower > another.lower){
+            return 1;
+        }
+        return 0;
     }
 
 }
