@@ -4,3 +4,7 @@
 3. Make "type[]" and "parameter" arguments as mandatory parameters in NumericalStatisticsAnalyzer constructor. -mzhao
 4. All the mandatory parameters requires by analyzer must be set in constructor. -mzhao
 5. Remove all the warnings in java classes.
+=== 2015-10-12 ===
+1. Add count below min , count above max and isComplete method for histogram analyzer
+=== 2015-10-13 ===
+1. Add junit test for histogram with randomly generated value.
